Error message.txt
The read operation timed out
Traceback (most recent call last):
  File "BasicClientActor.py", line 144, in <module>
    bsa.connect_to_server()
  File "C:\Users\USERNAME\PycharmProjects\HexGame\BasicClientActorAbs.py", line 81, in connect_to_server
    self.play_tournament()
  File "C:\Users\USERNAME\PycharmProjects\HexGame\BasicClientActorAbs.py", line 200, in play_tournament
    usr_move = str(self.handle_get_action(ast.literal_eval(state)))
  File "C:\Users\USERNAME\AppData\Local\Programs\Python\Python37\lib\ast.py", line 46, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "C:\Users\USERNAME\AppData\Local\Programs\Python\Python37\lib\ast.py", line 35, in parse
    return compile(source, filename, mode, PyCF_ONLY_AST)
  File "<unknown>", line 1
    The read operation timed out
           ^
SyntaxError: invalid syntax